--- a/smb.conf
+++ b/smb.conf
@@ -6,12 +6,30 @@ netbios name=BigBrother
 ;netbios aliases
 ;include
 
-;name resolve order=bcast host lmhosts wins
-wins support=Yes
-;domain master=no
-;local master=Yes
-;preferred master=Yes
-;os level=35
+;interfaces=eth0,lo
+;bind interfaces only=yes
+;smb ports=139 445
+
+log file=/var/log/samba/log.%m
+max log size=50
+
+wins support=yes
+name resolve order=wins host lmhosts bcast
+dns proxy=yes
+local master=yes
+preferred master=yes
+os level=254
+
+domain master=no
+
+guest ok=yes
+guest only=no
+read only=yes
+browseable=yes
+create mask=0600
+directory mask=0700
+;hide dot files=yes
+
 
 security=user
 map to guest=Bad User
@@ -26,16 +44,6 @@ passwd program=/bin/passwd %u
 ;passwd chat
 unix password sync=Yes
 
-log file=/var/log/samba/log.%m
-max log size=50
-
-guest ok=yes
-guest only=no
-read only=yes
-browseable=yes
-create mask=0600
-directory mask=0700
-
 [homes]
 comment=user folder
 path=/home/%S
@@ -45,33 +53,32 @@ read only=no
 browseable=no
 valid users=%S
 
-[davideshare]
-comment=user shared folder
-path=/home/davideshare
+vfs objects = recycle
+recycle:repository=.recycle
+;recycle:directory_mode=0700
+;recycle:subdir_mode=0700
+recycle:keeptree = yes
+recycle:touch = yes
+recycle:versions= yes
+recycle:exclude = *.tmp *.bak ~$*
+recycle:exclude_dir = /tmp /temp /cache
+recycle:noversions = *.doc *.xls *.ppt
 
-write list=davide
+[shares]
+comment=user shared folder
+path=/home/shares
+
+read only=no
 create mask=644
 directory mask=755
 
-[commonshare]
-comment=shared folder
-path=/home/commonshare
-
-guest only=yes
-read only=no
-
-[wiishare]
-comment=shared folder for wii games
-path=/home/wiishare
-
-write list=davide marco_giordano
-create mask=666
-directory mask=777
-
-[pathfinder]
-comment=shared folder for pathfinderRPG
-path=/home/pathfinder
-
-write list=davide marco_giordano manuel
-create mask=666
-directory mask=777
+vfs objects = recycle
+recycle:repository=.recycle
+;recycle:directory_mode=0700
+;recycle:subdir_mode=0700
+recycle:keeptree = yes
+recycle:touch = yes
+recycle:versions= yes
+recycle:exclude = *.tmp *.bak ~$*
+recycle:exclude_dir = /tmp /temp /cache
+recycle:noversions = *.doc *.xls *.ppt
