added premium(aka anon folder) to the configuration file

--- a/smb.conf
+++ b/smb.conf
@@ -52,11 +52,12 @@ guest ok=no
 read only=no
 browseable=no
 valid users=%S
+invalid users=premium
 
 vfs objects = recycle
 recycle:repository=.recycle
-;recycle:directory_mode=0700
-;recycle:subdir_mode=0700
+recycle:directory_mode=0700
+recycle:subdir_mode=0700
 recycle:keeptree = yes
 recycle:touch = yes
 recycle:versions= yes
@@ -74,11 +75,34 @@ directory mask=755
 
 vfs objects = recycle
 recycle:repository=.recycle
-;recycle:directory_mode=0700
-;recycle:subdir_mode=0700
+recycle:directory_mode=0700
+recycle:subdir_mode=0700
 recycle:keeptree = yes
 recycle:touch = yes
 recycle:versions= yes
 recycle:exclude = *.tmp *.bak ~$*
 recycle:exclude_dir = /tmp /temp /cache
 recycle:noversions = *.doc *.xls *.ppt
+
+[premium]
+comment=gold member only
+path=/home/premium
+
+guest ok=no
+read only=no
+browseable=yes
+valid users=premium,davide
+force user=premium
+
+vfs objects = recycle
+recycle:repository=.recycle
+recycle:directory_mode=0700
+recycle:subdir_mode=0700
+recycle:keeptree = yes
+recycle:touch = yes
+recycle:versions= yes
+recycle:exclude = *.tmp *.bak ~$*
+recycle:exclude_dir = /tmp /temp /cache
+recycle:noversions = *.doc *.xls *.ppt
+
+
